fix create post spacing

--- a/react-app/src/components/Post/CreatePostForm/CreatePostForm.css
+++ b/react-app/src/components/Post/CreatePostForm/CreatePostForm.css
@@ -22,7 +22,7 @@
 
 .form-for-create-post {
 
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     width: 100%;
     max-width: 540px;
     align-items: flex-start;
