--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -15,11 +15,10 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: pink;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 #modal-content {
   position: absolute;
-  background-color:pink;
-  height: 100%;
+  background-color:white;
 }
